robot-moving-company: Made it impossible to rotate the ramp in game mode using the mouse
robot-moving-company: Bugfixes for game repeating
# 1.03.49 (35470) Oct 3, 2009
robot-moving-company: Show mass, friction, points of current object
robot-moving-company: Added FBD
robot-moving-company: Fixed: More force or lighter objects for F&M Mode, some objects immobile
robot-moving-company: Fixed: Energy bar scale should be smaller depending on maximum energy
robot-moving-company: Fixed: Shouldn't be able to apply force after getting points for an object
robot-moving-company: Made object move to house on success
robot-moving-company: Made it so you can't apply a force by dragging the object
robot-moving-company: Fixed: If object stops at x<0, with robot energy depleted, round should end
robot-moving-company: Added door open/close animation
robot-moving-company: Added door open/close
robot-moving-company: Removed height and angle indicators
robot-moving-company: Improve focus on activation
robot-moving-company: Added support for 1d mode
robot-moving-company: Added introduction screen
robot-moving-company: Improved viewport and layout
robot-moving-company: Removed unused controls
Set the clear heat button threshold to be 50% higher
Fixed: windowed FBD should default to 50% of what it is now
forces-and-motion: Changed the layout so that the FBD doesn't overap the object's force label by default
# 1.03.48 (35433) Oct 2, 2009
Added a physics workaround to help reduce or resolve the flickering problem by enabling the "pressing" wall force a bit sooner
    Should resolve:  Force vectors flicker when pushing against the right-hand-side wall when parallel gravity component is nonzero
Fixed: FBD should open as a separate window in cases where it does not fit in the play area, for all graphing tabs in F&M + Ramp
Moved play area down in non-charting F&M modules so the FBD can go above the surface area