@@ -1,3 +1,4 @@
+Made FBD Dialog disappear on module switch to ensure that fbd dialog doesn't show for this module while user is on a different module
 robot-moving-company: Made it impossible to rotate the ramp in game mode using the mouse
 robot-moving-company: Bugfixes for game repeating
 # 1.03.49 (35470) Oct 3, 2009
